# skuldbot

./: .env.example  .gitignore  .lintstagedrc.json  .prettierignore  CHANGES_APPLIED.md  CLAUDE.md  DESIGN_SYSTEM.md  INTEGRATION_COMPLETE.md  POLISH_PLAN.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  claude.md  docker-compose.dev.yml  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  recomendacion chatgpt sobre ai y pii phi  turbo.json
.github/: pull_request_template.md
docs/: 5_STAR_DOCU_PLAN.md  AGENT_WORK_CONTROLS_POLICY.md  AI_PLANNER_CONNECTIONS_COMPLETE.md  AI_PLANNER_EVOLUTION_PLAN.md  BYOM_ARCHITECTURE.md  BYOM_CONNECTORS.md  BYOM_IMPLEMENTATION_COMPLETE.md  BYOM_QUICK_START.md  COMPLETE_AUDIT_REPORT.md  COMPLIANCE_FIRST_POLICY.md  CONTRACTS_FULL_PORT_PLAN.md  CP_VS_ORCHESTRATOR_SEPARATION.md  DATA_INTEGRATION.md  DEPLOYMENT_GUIDE.md  DOCS_GOVERNANCE_NODES_AND_PLATFORM.md  EDITOR_ROADMAP.md  ENGINEERING_STANDARDS.md  ENGINE_REFERENCE.md  ENTERPRISE_RPA_AI_AGENT_MASTER_PLAN.md  ENTERPRISE_UI_BRANDING_NON_NEGOTIABLES.md  FEATURES_MARKETING.md  FINAL_COMPLETION_SUMMARY.md  INSTALLATION.md  LLM_CONNECTIONS_STORAGE.md  LUIS_CONTRACTS_FULL_PORT_INSTRUCTIONS.md  LUIS_CP_REMEDIATION_INSTRUCTIONS.md  LUIS_NEXION_ENCRYPTION_REFERENCE.md  MARKETING_POSITIONING.md  MASTER_PLAN.md  MCP_HYBRID_ARCHITECTURE.md  MFA_TOTP_BOT_AUTHENTICATION.md  NATIVE_TO_SHADCN_MIGRATION.md  NEXION_COMMERCIAL_STACK_MIGRATION_PLAN.md  NEXION_EVIDENCE_PACKAGE_TRACEABILITY_ASSESSMENT.md  NEXION_FULL_PORT_MANIFEST.md  NEXION_FULL_SCAN_ADAPTATION_BLUEPRINT.md  NEXION_NEXIONONE_DEEP_SCAN_2026-02-22.md  NEXION_PLN005_LESSONS_FOR_SKULD.md  NEXION_REUSE_MATRIX.md  NEXION_SKULD_MODULE_DECISION_MATRIX.md  (+35 more)
docs-components/: next.config.mjs  package.json
engine/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  QUICKSTART.md  QUICK_RPA_TEST.md  README.md  RPA_CAPABILITIES.md  STATUS.md  pyproject.toml  requirements.txt  setup.py
engine/.github/workflows/: ci.yml
engine/docs/: ARCHITECTURE.md  DSL_SPEC.md
engine/examples/: README.md  browser_automation.py  simple_bot.py
engine/skuldbot/: __init__.py
engine/skuldbot/ai/: __init__.py  prompt_loader.py
engine/skuldbot/ai/prompts/: README.md
engine/skuldbot/ai/prompts/analyze_image/: system_v1.md
engine/skuldbot/ai/prompts/classify/: system_v1.md
engine/skuldbot/ai/prompts/compare_images/: system_v1.md
engine/skuldbot/ai/prompts/extract/: system_v1.md
engine/skuldbot/ai/prompts/extract_table/: system_v1.md
engine/skuldbot/ai/prompts/repair/: context_finance.md  context_general.md  context_healthcare.md  context_insurance.md  system_v1.md
engine/skuldbot/ai/prompts/sentiment/: system_v1.md
engine/skuldbot/ai/prompts/summarize/: system_v1.md
engine/skuldbot/ai/prompts/translate/: system_v1.md
engine/skuldbot/cli/: __init__.py  ai_catalog.py
engine/skuldbot/compiler/: __init__.py  compiler.py
engine/skuldbot/compiler/templates/: error_handler.robot.j2  keywords.robot.j2  main.robot.j2  main_v2.robot.j2
engine/skuldbot/dsl/: __init__.py  models.py  validator.py
engine/skuldbot/evidence/: __init__.py  encryption.py  integrity.py  retention.py  siem.py  signature.py  writer.py
engine/skuldbot/evidence/collectors/: decision.py  lineage.py
engine/skuldbot/executor/: __init__.py  executor.py  interactive_executor.py  schema_reporter.py
engine/skuldbot/libs/: __init__.py  ai.py  compliance.py  data.py  human.py  local_vault.py  mfa.py  runtime_envelope.py  storage.py  subprocess.py  vault.py  vectordb.py
engine/skuldbot/nodes/: __init__.py  excel.py  registry.py
engine/tests/: __init__.py  conftest.py  test_compiler.py  test_dsl.py  test_executor.py  test_runtime_envelope.py
engine/tools/: form_server.py
orchestrator/: .gitkeep  TODO.md
runner/: .gitkeep  pyproject.toml
runner-app/: package.json
runner-app/src-tauri/: Cargo.toml
runner-app/src-tauri/src/: config.rs  runner.rs
runner/src/skuldbot_runner/: agent.py  api_client.py  cli.py  executor.py  models.py
scripts/: dev-setup.sh  (+1 more)
(+1088 files in other folders)
