[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skuldbot-runner"
version = "0.1.0"
description = "SkuldBot Runner Agent - Executes RPA bots from Orchestrator"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Khipus Team" }
]

dependencies = [
    "httpx>=0.25.0",          # HTTP client for API calls
    "pydantic>=2.0.0",        # Data validation
    "pydantic-settings>=2.0.0", # Settings management
    "robotframework>=7.0",    # Bot execution
    "rpaframework>=28.0.0",   # RPA libraries
    "python-dotenv>=1.0.0",   # Environment variables
    "structlog>=23.0.0",      # Structured logging
    "tenacity>=8.0.0",        # Retry logic
    "psutil>=5.9.0",          # System info
]

[project.optional-dependencies]
vault = [
    "hvac>=2.0.0",            # HashiCorp Vault client
    "boto3>=1.34.0",          # AWS Secrets Manager
    "azure-identity>=1.15.0", # Azure authentication
    "azure-keyvault-secrets>=4.7.0", # Azure Key Vault
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]
all = [
    "skuldbot-runner[vault,dev]",
]

[project.scripts]
skuldbot-runner = "skuldbot_runner.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/skuldbot_runner"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
